input field clears after submit, added auto to height so chat window will expand with chats

--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -3,7 +3,7 @@
   border-radius: 5%;
   padding: 15px 15px 15px 15px;
   width: 75%;
-  height: 500px;
+  height: auto;
   margin: auto;
   margin-top: 15px;
 }
