--- a/src/components/events/Events.css
+++ b/src/components/events/Events.css
@@ -11,7 +11,7 @@
   display: block;
 }
 .eventCard {
-  border: 5px solid #00bbf0;
+  border: 5px solid #b3eeff;
   /* width: 32%; */
   max-width: 10em;
   min-width: 10em;
