--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -1,30 +1,34 @@
 .container-cards {
-  border: 8px solid #007bff;
-  border-radius: 5%;
+  border: 8px solid goldenrod;
+  border-radius: 8px;
   padding: 15px 15px 15px 15px;
   width: 70%;
-  height: auto;
+  max-height: 550px;
   margin: auto;
   margin-top: 15px;
-  background-color: #00bbf0;
+  background-color: #ffffff;
+  overflow: scroll;
 }
 
 .chats {
   display: flex;
   border: 5px solid goldenrod;
-  background-color: lightskyblue;
+  background-color: #ffffff;
   opacity: 0.9;
-  border-radius: 10%;
+  border-radius: 8px;
   margin: 8px 8px 8px 8px;
   padding: 5px 5px 5px 5px;
-  width: auto;
+  max-width: 350px;
 }
-.chats:hover {
-  background: #007bff;
+
+.float-right {
+
 }
+
 .chatBtns {
   margin-left: 58%;
 }
+
 .submitSection {
   text-align: center;
   margin: 5px;
