--- a/src/components/chat/Chat.css
+++ b/src/components/chat/Chat.css
@@ -1,34 +1,30 @@
 .container-cards {
   border: 8px solid goldenrod;
-  border-radius: 8px;
+  border-radius: 5px;
   padding: 15px 15px 15px 15px;
   width: 70%;
-  max-height: 550px;
+  height: auto;
   margin: auto;
   margin-top: 15px;
-  background-color: #ffffff;
-  overflow: scroll;
+  background-color: #e5ecee;
+
 }
 
 .chats {
   display: flex;
   border: 5px solid goldenrod;
-  background-color: #ffffff;
+  background-color: lightskyblue;
   opacity: 0.9;
-  border-radius: 8px;
+  border-radius: 5px;
   margin: 8px 8px 8px 8px;
   padding: 5px 5px 5px 5px;
-  max-width: 350px;
-}
-
-.float-right {
-
+  width: auto;
+  overflow: scroll;
 }
 
 .chatBtns {
   margin-left: 58%;
 }
-
 .submitSection {
   text-align: center;
   margin: 5px;
